# cnn

./: .gitignore  Cargo.toml  README.md
config/: config.json
src/: clipr.rs  cnn.rs  layr.rs  loadr.rs  log.rs  main.rs  optimizr.rs
